--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@ag-grid-enterprise/server-side-row-model": "^30.2.0",
     "@mantine/core": "7.1.1",
     "@mantine/hooks": "7.1.1",
+    "ag-grid-community": "^30.2.0",
+    "ag-grid-enterprise": "^30.2.0",
+    "ag-grid-react": "^30.2.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
